# bsc-thesis

./: .env  README.md  justfile
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE
.github/workflows/: build.yaml  hugo.yaml
code/kafka/: kafka-persistent-vcluster.yaml  kafka-persistent.yaml  kafka.yaml
code/kafka-tester/: Cargo.toml  docker-compose.yaml
code/kafka-tester/src/: main.rs
code/kube/: taint_controller_node.md
code/kube-operator/: README.md  pdf-crd-v1.yaml  pdf-crd-v2.yaml  pdf-crd.yaml  pdf-resource.yaml
code/metallb/: metallb.yaml  values.yaml
code/postgres/: pgbench_wrapper.py  postgres_bare_metal.yaml  postgres_nodeport.yaml  postgres_operator.yaml
code/postgres-deployment/: spec.yaml
code/test_results/: host_cluster_postgres_test_100_2023-12-06T21:54:54.953488.json  host_cluster_postgres_test_10_2023-12-06T20:22:53.679745.json  host_cluster_postgres_test_200_2023-12-05T16:03:01.984713.json  host_cluster_postgres_test_200_2023-12-05T17:32:21.052294.json  host_cluster_postgres_test_200_2023-12-06T23:52:25.117546.json  host_cluster_postgres_test_2023-11-30T16:18:26.931440.json  host_cluster_postgres_test_2023-11-30T16:59:33.057269.json  host_cluster_postgres_test_2023-11-30T17:31:18.541691.json  host_cluster_postgres_test_20_2023-12-06T20:36:27.120067.json  host_cluster_postgres_test_50_2023-12-06T20:55:23.185226.json  (+8 more)
code/utils/: kafkabench.py  kube.py  (+3 more)
plots/: Cargo.toml  snak.ipynb
plots/src/: data.rs  main.rs
presentation/: README.md  config.toml  go.mod
thesis/: .gitignore  bibliography.yaml  main.typ  preamble.typ
(+62 files in other folders)
