[package]
name = "plots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
hdrhistogram = "7.5.4"
plotly = { version = "0.8.4", features = ["kaleido"] }
rayon = "1.8.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
# plotters = "0.3.5"
